# metody-numeryczne-io-2025

./: CMakeLists.txt  README.md
CSV WYKRESY/: Dla_100.csv  Dla_16.csv  Dla_2.csv  Dla_4.csv  Dla_8.csv  mian.py
lab02/: Laboratora_02.xlsx  dane.txt  interpolacja_gr_3_INO.txt  main  main.cpp  output.txt
lab03/: horner_data.csv  interpolacja  interpolacja_H_gr_03.txt  interpolacja_N_gr_03.txt  interpolation.cpp  interpolation.h  lab03_main.cpp  plot.py  plot_data.csv  plot_horner.py  program
lab04/: gauss_elimination_gr3IO_A.txt  gauss_elimination_gr3IO_B.txt  gauss_elimination_gr3IO_C.txt  main  main.cpp  wyniki.txt
lab05/: LU_gr3_2.txt  main  main.cpp
lab06/: convergence_data.txt  exact_integration.py  kwadratury  kwadratury.cpp  plot_convergence.py
lab07/: comparison_poly.txt  comparison_xcos3x.txt  dane.txt  exact_exp_x2.txt  exact_integration_gl.py  exact_poly.txt  exact_value(1).txt  exact_x_sin3x.txt  exact_xcos3x.txt  gl_convergence_exp_x2.txt  gl_convergence_x_sin3x.txt  kwadratury_gl  kwadratury_gl.cpp  plot_gl_comparison.py  test_kwadratury_gl.cpp
lab08/: approximation_data.txt  error_by_degree.txt  main  main.cpp  script.py
lab09/: blad_vs_krok.txt  euler_thermal  euler_thermal.cpp  generate_plots.py  summary_table.txt  thermal_visualization.py  wyniki_h1.txt  wyniki_h2.txt  wyniki_h3.txt
lab10/: generate_plots.py  lab10  main.cpp
lab11/: function1_newton_approx.csv  function1_secant_approx.csv  function2_newton_approx.csv  function2_secant_approx.csv  function3_newton_approx.csv  function3_secant_approx.csv  main  main.cpp  main.py  (+1 more)
(+1 files in other folders)
